# deep-learning-from-zero-3

./: pyproject.toml
src/: main.py
src/modules/dezero/: __init__.py  core.py  core_simple.py  functions.py  utils.py
src/modules/lower_layer_modules/: FileSideEffects.py
src/modules/steps/: step01.py  step02.py  step03.py  step04.py  step05_06.py  step06.py  step07.py  step08.py  step09.py  step10.py  step11.py  step12.py  step13.py  step14.py  step15_16.py  step17.py  step18.py  step19.py  step20.py  step21.py  step23.py  step24.py  step25.dot  step25_26.py  step27.py  step28.py  step29.py  step30_33.py  step34.py
