[tool.poetry]
name = "ゼロから作るdeep learning ③"
version = "0.1.0"
description = ""
authors = ["KAN-YA, Yukitoshi <tenagusami@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.25.2"
matplotlib = "^3.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
